<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/kitchen"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#F9AEAE"
            android:text="@string/title"
            android:textColor="#99090A"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="60dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="#FFFFFF"
            android:text="@string/spiciness"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
    >
        <Button
                android:id="@+id/btnMild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mild"
                android:textSize="18sp"
                android:background="#FC6060"/>

        <Button
                android:id="@+id/btnMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textSize="18sp"
                android:background="#F12929"/>

        <Button
                android:id="@+id/btnSpicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spicy"
                android:textSize="18sp"
                android:background="#990C0C"/>
    </LinearLayout>

</LinearLayout>